// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replace translations 1`] = `
"\\"use strict\\";

\\"test translation\\";"
`;

exports[`replace translations 2`] = `
"\\"use strict\\";

\\"test 2 translation\\";"
`;
